b=359002, single pixel background image is incorrect color (third line of acid2), r=stuart